--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My website</title>
-    <link rel="stylesheet" href="/css/bootstrap.css">
-    <link rel="stylesheet" href="/css/fontawesome.css">
-</head>
-<body>
-    <h1>Hello world!</h1>
-    <i class="fa-solid fa-user"></i>
-    <script src="/js/bootstrap.bundle.min.js"></script>
-</body>
-</html>
+---
+title: "home"
+layout: "/layouts/baseLayout.html"
+---
+
+<p>Hello World!</p>
+<i class="fa-solid fa-globe"></i>
