Update website content
Update index.html and create about.html page.

--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 ---
-title: "home"
+title: "Home"
 layout: "/layouts/baseLayout.html"
 ---
 
-<p>Hello World!</p>
+## Hello World!
 <i class="fa-solid fa-globe"></i>
