Add min height to container

--- a/src/content/pages/contact.html
+++ b/src/content/pages/contact.html
@@ -2,5 +2,6 @@
 title: "Contact"
 layout: "/layouts/baseLayout.html"
 ---
-
-<h3>Contact page</h3>
+<main class="container-wrapper">
+    <h3>Contact page</h3>
+</main>
