--- a/src/content/pages/legal-notice.html
+++ b/src/content/pages/legal-notice.html
@@ -2,5 +2,6 @@
 title: "Legal Notice"
 layout: "/layouts/baseLayout.html"
 ---
-
-<h3>Legal Notice</h3>
+<main class="container-wrapper">
+    <h3>Legal Notice</h3>
+</main>
