--- a/src/content/pages/privacy-policy.html
+++ b/src/content/pages/privacy-policy.html
@@ -2,5 +2,6 @@
 title: "Privacy Policy"
 layout: "/layouts/baseLayout.html"
 ---
-
-<h3>Privacy Policy</h3>
+<main class="container-wrapper">
+    <h3>Privacy Policy</h3>
+</main>
