--- a/src/index.html
+++ b/src/index.html
@@ -3,5 +3,7 @@ title: "Home"
 layout: "/layouts/baseLayout.html"
 ---
 
-## Hello World!
-<i class="fa-solid fa-globe"></i>
+<main class="container-wrapper">
+    ## Hello World!
+    <i class="fa-solid fa-globe"></i>
+</main>
