--- a/src/content/pages/about.html
+++ b/src/content/pages/about.html
@@ -2,5 +2,6 @@
 title: "About"
 layout: "/layouts/baseLayout.html"
 ---
-
-<h3>About page</h3>
+<main class="container">
+    <h3>About page</h3>
+</main>
