--- a/src/content/pages/about.html
+++ b/src/content/pages/about.html
@@ -2,6 +2,6 @@
 title: "About"
 layout: "/layouts/baseLayout.html"
 ---
-<main class="container">
+<main class="container-wrapper">
     <h3>About page</h3>
 </main>
